--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,9 @@ github_username:  oreoshake
 # Build settings
 markdown: kramdown
 highlighter: rouge
+
+gems:
+- jekyll-mentions
+- jemoji
+- jekyll-redirect-from
+- jekyll-sitemap
