--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -4,6 +4,7 @@ jobs:
   triage:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - name: Set up Ruby ${{ matrix.ruby }}
       uses: actions/setup-ruby@v1
       with:
