--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -1,5 +1,8 @@
 name: stats
-on: [pull_request, push]
+on:
+  push:
+  schedule:
+  - cron: '0 0 * * *' # Once per day at midnight
 jobs:
   triage:
     runs-on: ubuntu-latest
