--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -19,5 +19,5 @@ jobs:
         git config --global user.email "oreoshake@users.noreply.github.com"
         git config --global user.name "Neil Matatall"
         git add stats.html
-        git commit -m "update stats"
+        git commit -m "update stats" || echo "No changes"
         git push origin HEAD
